# pudnax.github.io

./: .gitignore  Cargo.toml  README.md  html_generator  index.html  lorem_ipsum.txt  my_lyon.js  my_lyon.wasm
assets/: css2.css  main.css
demos/html/: 000.html  009.html  015.html  019.html  020.html  021.html  023.html  024.html  025.html  032.html  033.html  barnsley_fern.js  convex_hull_2.wasm  flow_field_04.js  flow_field_06.js  flow_field_09.wasm  fourier.js  (+8 more)
html/: 000.html  001.html  002.html  003.html  004.html  005.html  006.html  007.html  008.html  009.html  010.html  011.html  012.html  013.html  014.html  015.html  016.html  017.html  018.html  019.html  020.html  021.html  022.html  026.html  027.html  028.html  029.html  030.html  031.html  1001.html  1002.html  1003.html  1004.html  1008.html  1010.html  1011.html  1012.html  1013.html  1014.html  1016.html  (+69 more)
js/: ui.js
libs/: quicksettings_3_0_2.min.js  support.js
src/: DVD.go  FourierJs.go  FourierJs_lite.go  Snowflake.go  angle_iter.rs  barnsley_fern.rs  cardioid_2.go  convex_hull.rs  convex_hull_2.rs  flow_field.rs  flow_field_2.rs  fourier_train.go  heart_go.go  html_generator.rs  kochFlake.go  kochFlake_hard.go  lyon.rs  noise_loop.rs  pi_collide.rs  polar_perlin.rs  raycast_2d.rs
stuff/: 1001.html  1001.rs  1003.html  1004.html  1005.html  1006.html  1007.html  1009.html  1015.html  DVD_go.js  DVD_go.js.map  SnowFall.go  cardioid_2.js.map  custom_fourier.js.map  fourier_400.js  heart_go.js  heart_go.js.map
styles/: panel_div.html
temp/: masterdemo.js  template.html
trash/: 001.html
(+14 files in other folders)
