[package]
name = "disDeal_github_io"
version = "0.1.0"
authors = ["komm <k.a.komissar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="html_generator"
path="./src/html_generator.rs"

[dependencies]
structopt = "0.2.18"
indicatif = "0.11.0"